--- a/main.html
+++ b/main.html
@@ -3,6 +3,12 @@
 <html>
 
 <head>
+	<label for=" ">name</label>
+	<input type="text" id="item" value="0" >
+	<label for=" ">price</label>
+	<input type="text" id="price" >
+	<button id="add">Add</button>
+	<h3 id="total">0</h3>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
